--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.0.4",
     "three": "^0.156.1",
     "vite-plugin-gltf": "^3.1.0"
   }
